front/front-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: front-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:
      containers:
        - name: front
          image: juanmigueld/front-names:1.7
          ports:
            - containerPort: 3000
