front/front-service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: front
spec:
  type: ClusterIP  
  selector:
    app: front
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
